--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "simulation",
+  "name": "fsa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "massive": "^4.7.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "massive": "^4.6.2",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +26,8 @@
     "eject": "react-scripts eject"
   },
   "main": "server/server.js",
-  "proxy": "http://localhost:5001",
+  "proxy": "http://localhost:4000",
+  "repository": "https://github.com/DevinBowen/full-stack-app-demo.git",
+  "author": "devin <deivnobowen@gmail.com>",
   "license": "MIT"
 }
